feat: 식당 등록 요청 승인/거절 시 알림 발행 및 JPA 설정 보완
- RestaurantSubmission 승인/거절 처리 시 등록 유저 조회 후 알림 메시지 발행
- admin 모듈에서 common 엔티티를 인식할 수 있도록 @EntityScan, @EnableJpaRepositories 설정 적용